@@ -300,12 +300,19 @@ void OvmsWebServer::HandleShell(PageEntry_t& p, PageContext_t& c)
         "border: 0 none;"
       "}"
     "}"
+    ".log { font-size: 87%; color: gray; }"
+    ".log.log-I { color: green; }"
+    ".log.log-W { color: darkorange; }"
+    ".log.log-E { color: red; }"
     "</style>");
 
-  c.panel_start("primary panel-minpad", "Shell");
+  c.panel_start("primary panel-minpad", "Shell"
+    "<div class=\"pull-right checkbox\" style=\"margin: 0;\">"
+      "<label><input type=\"checkbox\" id=\"logmonitor\" checked> Log Monitor</label>"
+    "</div>");
 
   c.printf(
-    "<pre class=\"get-window-resize\" id=\"output\">%s</pre>"
+    "<pre class=\"receiver get-window-resize\" id=\"output\">%s</pre>"
     "<form id=\"shellform\" method=\"post\" action=\"#\">"
       "<div class=\"input-group\">"
         "<label class=\"input-group-addon hidden-xs\" for=\"input-command\">OVMS#</label>"
@@ -318,8 +325,22 @@ void OvmsWebServer::HandleShell(PageEntry_t& p, PageContext_t& c)
     , _html(output.c_str()), _attr(command.c_str()));
 
   c.print(
-    "<script>"
-    "$(\"#output\").on(\"window-resize\", function(){"
+    "<script>(function(){"
+    "var $output = $('#output');"
+    "var htmsg = \"\";"
+    "for (msg of loghist)"
+      "htmsg += '<div class=\"log log-'+msg[0]+'\">'+msg+'</div>';"
+    "$output.html(htmsg);"
+    "$output.on(\"msg:log\", function(ev, msg){"
+      "if (!$(\"#logmonitor\").prop(\"checked\")) return;"
+      "htmsg = '<div class=\"log log-'+msg[0]+'\">'+msg+'</div>';"
+      "if ($(\"html\").hasClass(\"loading\"))"
+        "$output.find(\"strong:last-of-type\").before(htmsg);"
+      "else "
+        "$output.append(htmsg);"
+      "$output.scrollTop($output.get(0).scrollHeight);"
+    "});"
+    "$output.on(\"window-resize\", function(){"
       "var $this = $(this);"
       "var pad = Number.parseInt($this.parent().css(\"padding-top\")) + Number.parseInt($this.parent().css(\"padding-bottom\"));"
       "var h = $(window).height() - $this.offset().top - pad - 81;"
@@ -332,7 +353,6 @@ void OvmsWebServer::HandleShell(PageEntry_t& p, PageContext_t& c)
       "if (!$(\"html\").hasClass(\"loading\")) {"
         "var data = $(this).serialize();"
         "var command = $(\"#input-command\").val();"
-        "var output = $(\"#output\");"
         "var lastlen = 0, xhr, timeouthd, timeout = 20;"
         "if (/^(test |ota |co .* scan)/.test(command)) timeout = 60;"
         "var checkabort = function(){ if (xhr.readyState != 4) xhr.abort(\"timeout\"); };"
@@ -340,9 +360,9 @@ void OvmsWebServer::HandleShell(PageEntry_t& p, PageContext_t& c)
           "\"timeout\": 0,"
           "\"beforeSend\": function(){"
             "$(\"html\").addClass(\"loading\");"
-            "output.html(output.html() + \"<strong>OVMS#</strong>&nbsp;<kbd>\""
+            "$output.append(\"<strong>OVMS#</strong>&nbsp;<kbd>\""
               "+ $(\"<div/>\").text(command).html() + \"</kbd><br>\");"
-            "output.scrollTop(output.get(0).scrollHeight);"
+            "$output.scrollTop($output.get(0).scrollHeight);"
             "timeouthd = window.setTimeout(checkabort, timeout*1000);"
           "},"
           "\"complete\": function(){"
@@ -356,8 +376,8 @@ void OvmsWebServer::HandleShell(PageEntry_t& p, PageContext_t& c)
               "var response = e.currentTarget.response;"
               "var addtext = response.substring(lastlen);"
               "lastlen = response.length;"
-              "output.html(output.html() + $(\"<div/>\").text(addtext).html());"
-              "output.scrollTop(output.get(0).scrollHeight);"
+              "$output.append($(\"<div/>\").text(addtext).html());"
+              "$output.scrollTop($output.get(0).scrollHeight);"
               "window.clearTimeout(timeouthd);"
               "timeouthd = window.setTimeout(checkabort, timeout*1000);"
             "},"
@@ -370,8 +390,8 @@ void OvmsWebServer::HandleShell(PageEntry_t& p, PageContext_t& c)
               "txt = \"Error \" + response.status + \" \" + response.statusText;"
             "else"
               "txt = \"Request \" + (xhrerror||\"failed\") + \", please retry\";"
-            "output.html(output.html() + '<div class=\"bg-danger\">'+txt+'</div>');"
-            "output.scrollTop(output.get(0).scrollHeight);"
+            "$output.append('<div class=\"bg-danger\">'+txt+'</div>');"
+            "$output.scrollTop($output.get(0).scrollHeight);"
           "},"
         "});"
         "if (shellhist.indexOf(command) >= 0)"
@@ -393,18 +413,16 @@ void OvmsWebServer::HandleShell(PageEntry_t& p, PageContext_t& c)
         "return false;"
       "}"
       "else if (ev.key == \"PageUp\") {"
-        "var o = $(\"#output\");"
-        "o.scrollTop(o.scrollTop() - o.height());"
+        "$output.scrollTop($output.scrollTop() - $output.height());"
         "return false;"
       "}"
       "else if (ev.key == \"PageDown\") {"
-        "var o = $(\"#output\");"
-        "o.scrollTop(o.scrollTop() + o.height());"
+        "$output.scrollTop($output.scrollTop() + $output.height());"
         "return false;"
       "}"
     "});"
     "$(\"#input-command\").focus();"
-    "</script>");
+    "})()</script>");
 
   c.panel_end();
   PAGE_HOOK("body.post");
